...
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_height="120dp">

                <EditText
                    android:id="@+id/new_comment_reply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="compose comment"
                    android:inputType="textMultiLine"
                    android:minLines="10" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/new_comment_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?attr/actionBarSize"
                android:text="submit"
                android:textStyle="bold" />
...
